--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "README.md"
   ],
   "scripts": {
-    "build": "echo \"Static package: build handled outside npm (see README).\""
+    "build": "echo \"Static package: build handled outside npm (see README).\"",
+    "test": "echo \"No tests configured\""
   },
   "repository": {
     "type": "git",
